# DPU-Profiling

./: .gitignore  README.md  datalog.csv.example  divide_data.py  doc_power.md  integrate_results.py  latency.py  plot.py  power.py  profiled_blocks.yaml  test_time_stamps.txt  to_so.py
elf/: dpu_0.elf
utils/: CMakeLists.txt  README.md  elfToSo.sh
utils/src/: latency.cpp
